# help_bot_v010

help_bot/: README.md  book.py  file_sorter.py  instructions.py  main.py  pyproject.toml  user_work_abstract.py
help_bot/contact_classes/: contact_work.py  record.py
help_bot/note_classes/: note.py  note_work.py
