[tool.poetry]
name = "help-you"
version = "0.1.0"
description = "Bot that help you to manage notes and contacts."
authors = ["team_5"]
readme = "README.md"
packages = [{include = "help_you"}]

[tool.poetry.dependencies]
python = "^3.10"
DateTime = "5.*"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
